# open-pic-3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: OpenPIC_User_Guide.md  VERBOSITY_LEVELS.md
sim/lib/: README.md  bound_cond.lua  callbacks.lua  cgs.lua  diag.lua  em_field.lua  init_field.lua  init_particles.lua  main.lua  params_log.lua  parts_count.lua  physics.lua  print_mpi.lua  sim_core.lua  utils.lua
sim/tasks/: README.md
sim/tasks/04_VERIFICATION/FIELD_LOOP_DIVB/: main.lua
sim/tasks/04_VERIFICATION/HYBRID_CONDITION_H_GT_CWPI/: README.md
sim/tasks/04_VERIFICATION/HYBRID_CONDITION_H_GT_CWPI/VALID/: main.lua
sim/tasks/04_VERIFICATION/HYBRID_CONDITION_H_GT_CWPI/VIOLATED/: main.lua
sim/tasks/04_VERIFICATION/INFLOW_DENSITY_CONSERVATION/: main.lua
sim/tasks/04_VERIFICATION/ION_BEAM_RESONANT/: main.lua
sim/tasks/04_VERIFICATION/LINEAR_ALFVEN/: main.lua
sim/tasks/04_VERIFICATION/LINEAR_MAGNETOSONIC/: main.lua
sim/tasks/04_VERIFICATION/ORSZAG_TANG_2D/: main.lua
sim/tasks/04_VERIFICATION/UNIFORM_EQUILIBRIUM/: main.lua
sim/tasks/04_VERIFICATION/UNIFORM_EQUILIBRIUM_NGP/: main.lua
sim/tasks/04_VERIFICATION/UNIFORM_EQUILIBRIUM_TSC/: main.lua
sim/tasks/04_VERIFICATION/WHISTLER_DISPERSION/COARSE/: main.lua
sim/tasks/04_VERIFICATION/WHISTLER_DISPERSION/FINE/: main.lua
sim/tasks/04_VERIFICATION/lib/: verification_common.lua
src/: main.cpp
src/config/: config.cpp  config.h  constants.h  diagnostics.h
src/core/: cell_stencil.h  check_particle.cpp  check_particle.h  electron_model.cpp  electron_model.h  field_solver.cpp  field_solver.h  filters.cpp  filters.h  gather_scatter.cpp  gather_scatter.h  heat_solver.h  sim_loop.cpp  simulate.h  solver_workspace.h
src/grid/: grid.cpp  grid.h  grid_filters.cpp  grid_filters.h  vector_3d.h  vector_3d.inl
src/io/: io_utilities.cpp  io_utilities.h  save_grid.cpp  save_grid.h  save_particles.cpp  save_particles.h
src/lua/: bind_to_lua.cpp  bind_to_lua.h  call_lua_function.cpp  call_lua_function.h  use_lua.cpp  use_lua.h
src/mpi/: mpi_runtime.cpp  mpi_runtime.h
src/particles/: marker_particles.cpp  marker_particles.h  particle_groups.cpp  particle_groups.h  particles.cpp  particles.h
src/util/: aligned_alloc.h  msvc.h  opic_fwd.h  utility.h
tests/: openpic_tests.cpp
tools/: Compare-BaselineAfterFix.ps1  Compare-GridOutputs.ps1  Run-MpiTaskGridChecks.ps1  compare_grid_outputs.py  git-memory-hook.py  setup_mpi_linux.sh  setup_msmpi.ps1
